[gd_scene load_steps=10 format=3 uid="uid://dqp8wdc8afym2"]

[ext_resource type="Script" uid="uid://chibscgb4ugrt" path="res://Part 2 - Simulation/simulation.gd" id="1_5aa5p"]
[ext_resource type="Script" uid="uid://bbx74ewv1fq14" path="res://Part 1 - Shader Control/Planet/Planet.gd" id="2_t4ss5"]
[ext_resource type="Resource" uid="uid://e7jwjwxjmth5" path="res://Part 1 - Shader Control/Planet/Planets/Cadbury.tres" id="3_7ywc1"]
[ext_resource type="Script" uid="uid://bn0vqx18j4deb" path="res://Part 2 - Simulation/TimeLapse/TimeLapse.gd" id="4_mpsra"]
[ext_resource type="PackedScene" uid="uid://cppma52pxwl7m" path="res://Part 1 - Shader Control/Planet/PlanetView.tscn" id="6_kvbqg"]
[ext_resource type="PackedScene" uid="uid://brb4qolpn34o8" path="res://utils/LanguageModelAdapter.tscn" id="7_wo0un"]

[sub_resource type="Resource" id="Resource_8edcw"]
script = ExtResource("2_t4ss5")
planet_name = ""
planet_overview = ""
population = 0
technology_level = 0
resource_richness = 0
primary_color = Color(0, 0, 0, 1)
secondary_color = Color(0, 0, 0, 1)
cloud_color = Color(0, 0, 0, 1)
primary_secondary_balance = 0.0
metadata/_custom_type_script = "uid://bbx74ewv1fq14"

[sub_resource type="Resource" id="Resource_7csni"]
script = ExtResource("4_mpsra")
time_elapsed = 0
time_lapse_history = ""
population_change_in_millions = 0
technology_level_change = 0
resource_richness_change = 0
new_overview = ""
metadata/_custom_type_script = "uid://bn0vqx18j4deb"

[sub_resource type="LabelSettings" id="LabelSettings_w0qsd"]
font_size = 12

[node name="Simulation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5aa5p")
planet_cache = Array[ExtResource("2_t4ss5")]([ExtResource("3_7ywc1")])
generation_target = SubResource("Resource_8edcw")
time_lapse_target = SubResource("Resource_7csni")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 153.0
offset_top = 80.0
offset_right = 1013.0
offset_bottom = 551.0

[node name="Name" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "??????"
horizontal_alignment = 1

[node name="TechnologyLevel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Technology Level"
horizontal_alignment = 2

[node name="ResourceRichness" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Resource Quality"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/HBoxContainer/SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(400, 300)
render_target_update_mode = 4

[node name="PlanetView" parent="VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("6_kvbqg")]
unique_name_in_owner = true
position = Vector2(216, 146)
scale = Vector2(1.99219, 2.08594)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Description" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
text = "...................................................................................................................................................................................."
label_settings = SubResource("LabelSettings_w0qsd")
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Population" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Population: ?????"
horizontal_alignment = 1

[node name="RandomWarp" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -185.0
offset_top = -85.0
grow_horizontal = 0
grow_vertical = 0
text = "Random Warp"

[node name="TimeLapseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -59.0
offset_right = 116.0
grow_vertical = 0
text = "Time Lapse"

[node name="PlanetGenerator" parent="." instance=ExtResource("7_wo0un")]
unique_name_in_owner = true

[node name="TimeStepper" parent="." instance=ExtResource("7_wo0un")]
unique_name_in_owner = true

[connection signal="pressed" from="RandomWarp" to="." method="_on_random_warp_pressed"]
[connection signal="pressed" from="TimeLapseButton" to="." method="_on_time_lapse_button_pressed"]
[connection signal="request_completed" from="PlanetGenerator" to="." method="_on_planet_generator_request_completed"]
[connection signal="request_failed" from="PlanetGenerator" to="." method="_on_planet_generator_request_failed"]
[connection signal="request_completed" from="TimeStepper" to="." method="_on_time_stepper_request_completed"]
[connection signal="request_failed" from="TimeStepper" to="." method="_on_time_stepper_request_failed"]
